# py835

./: .gitignore  LICENSE  README.md  example.xlsx  pyproject.toml  requirements.txt  setup.py  test.xlsx
py835/: __init__.py  codes.py  py835.py  py835_alpha.py
py835/codes/: claim_adjustment_group_codes.csv  claim_adjustment_group_codes.py  claim_adjustment_reason_codes.csv  claim_adjustment_reason_codes.py  claim_adjustment_reason_groups.csv  claim_adjustment_reason_groups.py  claim_status_category_codes.csv  claim_status_category_codes.py  claim_status_codes.csv  claim_status_codes.py  error_reason_codes.csv  error_reason_codes.py  insurance_business_process_application_error_codes.csv  insurance_business_process_application_error_codes.py  insurance_descriptor_codes.csv  insurance_descriptor_codes.py  payment_type_codes.csv  payment_type_codes.py  property_casualty_codes.csv  property_casualty_codes.py  provider_adjustment_reason_codes.csv  provider_adjustment_reason_codes.py  remittance_advice_remark_codes.csv  remittance_advice_remark_codes.py  report_type_codes.csv  report_type_codes.py  service_review_decision_codes.csv  service_review_decision_codes.py  service_type_codes.csv  service_type_codes.py  service_type_descriptor_codes.csv  service_type_descriptor_codes.py
