[build-system]
requires = ["setuptools","pyx12==2.3.3,"wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py835"
version = "0.1.0"
description = "py835 is a wrapper for pyx12 used by DHR Health for parsing .835 files."
authors = [
    { name = "DHR Health - Data Team", email = "samuel.cavazos@dhr-rgv.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/DHR-Health/py835"
